--- a/forest_people_intro.Rmd
+++ b/forest_people_intro.Rmd
@@ -14,7 +14,7 @@ output:
       highlightLines: true
       countIncrementalSlides: false
       ratio: '16:9'
-      beforeInit: "macros.js"
+    
 
 ---
 
@@ -25,7 +25,7 @@ options(htmltools.dir.version = FALSE)
 
 # A _Caatinga_, seus povos e suas florestas
 .center[
-```{r, echo=FALSE}
+```{r, echo=FALSE, out.width="60%"}
 knitr::include_graphics("img/caat.png")
 ```
 ]
@@ -38,16 +38,16 @@ knitr::include_graphics("img/pessoas.png")
 
 ---
 # A Caatinga, seus povos e suas _florestas_
-
-```{r, echo=FALSE}
+.center[
+```{r, echo=FALSE, out.width="80%"}
 knitr::include_graphics("img/mapbiom_caat.png")
 ```
-
+]
 
 ---
 # OBJETIVO: Medir a sensibilidade do socioecossistema da Caatinga às mudanças climáticas
 .center[
-```{r, echo=FALSE, out.width="80%"}
+```{r, echo=FALSE, out.width="70%"}
 knitr::include_graphics("img/vulner.png")
 ```
 ]
